--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -55,42 +55,42 @@ $blue: var(--sjs-special-blue, #437fd9);
 $blue-light: var(--sjs-special-blue-light, var(--blue-light, rgba(67, 127, 217, 0.1)));
 $blue-forecolor: var(--sjs-special-blue-forecolor, #ffffff);
 
-$font-family: var(--font-family);
+$font-family: var(--sjs-font-family, var(--font-family));
 $font-size: var(--sjs-font-size, 16px);
 
-$font-surveytitle-family: var(--sjs-font-surveytitle-family, var(--font-family));
+$font-surveytitle-family: var(--sjs-font-surveytitle-family, #{$font-family});
 $font-surveytitle-weight: var(--sjs-font-surveytitle-weight, 700);
 $font-surveytitle-color: var(--sjs-font-surveytitle-color, #{$primary});
 
-$font-surveydescription-family: var(--sjs-font-surveydescription-family, var(--font-family));
+$font-surveydescription-family: var(--sjs-font-surveydescription-family, #{$font-family});
 $font-surveydescription-weight: var(--sjs-font-surveydescription-weight, 400);
 $font-surveydescription-color: var(--sjs-font-surveydescription-color, #{$foreground-light});
 
-$font-headertitle-family: var(--sjs-font-headertitle-family, var(--font-family));
+$font-headertitle-family: var(--sjs-font-headertitle-family, #{$font-family});
 $font-headertitle-weight: var(--sjs-font-headertitle-weight, 700);
 $font-headertitle-color: var(--sjs-font-headertitle-color, #{$foreground-dim});
 
-$font-headerdescription-family: var(--sjs-font-headerdescription-family, var(--font-family));
+$font-headerdescription-family: var(--sjs-font-headerdescription-family, #{$font-family});
 $font-headerdescription-weight: var(--sjs-font-headerdescription-weight, 400);
 $font-headerdescription-color: var(--sjs-font-headerdescription-color, #{$foreground-dim-light});
 
-$font-pagetitle-family: var(--sjs-font-pagetitle-family, var(--font-family));
+$font-pagetitle-family: var(--sjs-font-pagetitle-family, #{$font-family});
 $font-pagetitle-weight: var(--sjs-font-pagetitle-weight, 700);
 $font-pagetitle-color: var(--sjs-font-pagetitle-color, var(--sjs-general-dim-forecolor, rgba(0, 0, 0, 0.91)));
 
-$font-pagedescription-family: var(--sjs-font-pagedescription-family, var(--font-family));
+$font-pagedescription-family: var(--sjs-font-pagedescription-family, #{$font-family});
 $font-pagedescription-weight: var(--sjs-font-pagedescription-weight, 400);
 $font-pagedescription-color: var(--sjs-font-pagedescription-color,
     var(--sjs-general-dim-forecolor-light, rgba(0, 0, 0, 0.45)));
 $font-pagedescription-size: var(--sjs-font-pagedescription-size, $font-size);
 
-$font-questiontitle-family: var(--sjs-font-questiontitle-family, var(--font-family));
+$font-questiontitle-family: var(--sjs-font-questiontitle-family, #{$font-family});
 $font-questiontitle-weight: var(--sjs-font-questiontitle-weight, 600);
 $font-questiontitle-color: var(--sjs-font-questiontitle-color,
     var(--sjs-general-forecolor, var(--foreground, #161616)));
 $font-questiontitle-size: var(--sjs-font-questiontitle-size, $font-size);
 
-$font-questiondescription-family: var(--sjs-font-questiondescription-family, var(--font-family));
+$font-questiondescription-family: var(--sjs-font-questiondescription-family, #{$font-family});
 $font-questiondescription-weight: var(--sjs-font-questiondescription-weight, 400);
 $font-questiondescription-color: var(--sjs-font-questiondescription-color,
     var(--sjs-general-forecolor-light, rgba(0, 0, 0, 0.45)));
@@ -98,7 +98,7 @@ $font-questiondescription-size: var(--sjs-font-questiondescription-size, $font-s
 $font-questionplaceholder-color: var(--sjs-font-questiondescription-color,
     var(--sjs-general-forecolor-light, rgba(0, 0, 0, 0.45)));
 
-$font-editorfont-family: var(--sjs-font-editorfont-family, var(--font-family));
+$font-editorfont-family: var(--sjs-font-editorfont-family, #{$font-family});
 $font-editorfont-weight: var(--sjs-font-editorfont-weight, 400);
 $font-editorfont-color: var(--sjs-font-editorfont-color, var(--sjs-general-forecolor, rgba(0, 0, 0, 0.91)));
 $font-editorfont-placeholdercolor: var(--sjs-font-editorfont-placeholdercolor, var(--sjs-general-forecolor-light, var(--foreground-light, #909090)));
