--- a/src/modern/blocks/sv-completedpage.scss
+++ b/src/modern/blocks/sv-completedpage.scss
@@ -1,5 +1,5 @@
 .sv-completedpage {
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-size: 1.875em;
   font-weight: bold;
   box-sizing: border-box;
