--- a/src/modern/blocks/sv-container.scss
+++ b/src/modern/blocks/sv-container.scss
@@ -1,7 +1,7 @@
 .sv-container-modern {
   color: var(--text-color, $text-color);
   font-size: var(--font-size, $font-size);
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
 }
 
 .sv-container-modern__title {
