--- a/src/common-styles/sv-drag-drop.scss
+++ b/src/common-styles/sv-drag-drop.scss
@@ -10,7 +10,7 @@
   position: absolute;
   z-index: 10000;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-size: calcFontSize(1);
   padding-left: calcSize(2.5);
   line-height: calcLineHeight(1.5);
