--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -4,7 +4,7 @@
   right: 10px;
   background-color: cadetblue;
   padding: 1px;
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-size: calcFontSize(0.875);
   font-style: normal;
   font-weight: 400;
