--- a/src/defaultV2-theme/blocks/sd-action.scss
+++ b/src/defaultV2-theme/blocks/sd-action.scss
@@ -9,7 +9,7 @@
   color: $primary;
   border-radius: calcSize(12.5);
   font-weight: 600;
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-style: normal;
   font-size: $font-questiontitle-size;
   line-height: multiply(1.5, $font-questiontitle-size);
