--- a/src/defaultV2-theme/blocks/sd-completedpage.scss
+++ b/src/defaultV2-theme/blocks/sd-completedpage.scss
@@ -1,5 +1,5 @@
 .sd-completedpage {
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-weight: bold;
   box-sizing: border-box;
   text-align: center;
@@ -70,7 +70,7 @@
       color: $primary;
       font-weight: 600;
       font-style: normal;
-      font-family: var(--font-family, $font-family);
+      font-family: $font-family;
       font-size: $font-questiontitle-size;
       line-height: multiply(1.5, $font-questiontitle-size);
     }
