--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -189,7 +189,7 @@
     background-color: transparent;
     cursor: pointer;
 
-    font-family: var(--font-family, $font-family);
+    font-family: $font-family;
     font-size: $font-editorfont-size;
     line-height: multiply(1.5, $font-editorfont-size);
     color: $font-questiondescription-color;
