--- a/src/defaultV2-theme/blocks/sd-progress-toc.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-toc.scss
@@ -1,4 +1,4 @@
-$font-family: var(--sjs-font-family, var(--font-family));
+$font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-family)));
 
 .sv_progress-toc {
   padding: calcSize(1);
