--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -62,7 +62,7 @@ body {
   --sd-mobile-width: 600px;
   --sd-timer-size: calc(18 * #{$base-unit});
   width: 100%;
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   background-color: $background-dim;
   position: relative;
 
