--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -55,7 +55,7 @@ $blue: var(--sjs-special-blue, #437fd9);
 $blue-light: var(--sjs-special-blue-light, var(--blue-light, rgba(67, 127, 217, 0.1)));
 $blue-forecolor: var(--sjs-special-blue-forecolor, #ffffff);
 
-$font-family: var(--sjs-font-family, var(--font-family));
+$font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-family)));
 $font-size: var(--sjs-font-size, 16px);
 
 $font-surveytitle-family: var(--sjs-font-surveytitle-family, #{$font-family});
@@ -166,7 +166,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 }
 
 @mixin smallBold {
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-style: normal;
   font-weight: 600;
   font-size: calcFontSize(0.75);
@@ -174,7 +174,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 }
 
 @mixin defaultBold {
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-style: normal;
   font-weight: 600;
   font-size: calcFontSize(1);
@@ -182,7 +182,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 }
 
 @mixin defaultFont {
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-style: normal;
   font-size: calcFontSize(1);
   line-height: calcLineHeight(1.5);
