--- a/src/modern/blocks/sv-table.scss
+++ b/src/modern/blocks/sv-table.scss
@@ -58,7 +58,7 @@
 }
 
 .sv-table__cell--header {
-  font-family: var(--font-family, $font-family);
+  font-family: $font-family;
   font-weight: bold;
   text-align: left;
 }
