--- a/src/modern/constants.scss
+++ b/src/modern/constants.scss
@@ -1,7 +1,10 @@
 $header-background-color: #e7e7e7;
 $body-container-background-color: #f4f4f4;
 
-$font-family: "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+:root {
+  --sjs-default-font-family: "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+$font-family: var(--font-family, var(--sjs-default-font-family));
 
 $main-color: #1ab394;
 $main-hover-color: #9f9f9f;
