work for Drop down. No room for text #1536 & fix logo padding

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -159,6 +159,7 @@
     font-size: $font-editorfont-size;
     font-weight: $font-editorfont-weight;
     font-family: $font-editorfont-family;
+    padding-inline-end: calcSize(2);
   }
 }
 
