work for https://github.com/surveyjs/service/issues/1539

--- a/src/common-styles/sv-brand-info.scss
+++ b/src/common-styles/sv-brand-info.scss
@@ -1,5 +1,10 @@
 sv-brand-info {}
 
+sv-brand-info, .sv-brand-info {
+  z-index: 1;
+  position: relative;
+}
+
 .sv-brand-info {
   width: 100%;
   font-family: $font-family;
