--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -82,7 +82,7 @@
   justify-content: center;
   background-color: $primary-light;
   color: $font-questiontitle-color;
-  font-size: calcFontSize(1);
+  font-size: $font-editorfont-size;
   border-radius: 100%;
   border: calcSize(0.25) solid transparent;
   width: calcSize(5);
@@ -92,11 +92,10 @@
   font-weight: 600;
   margin-left: calcSize(0);
 
-  &:empty {
-    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAArSURBVHgB7cuhEQAwDMNAtUN4//m8RMtygcE5PxMQxAKnh6Q3mWzXd4mAD4cJBAQCqfbUAAAAAElFTkSuQmCC");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: multiply(1, $font-editorfont-size);
+  svg {
+      fill: $font-questiontitle-color;
+      width: $font-editorfont-size;
+      height: $font-editorfont-size;
   }
 }
 
