--- a/src/knockout/templates/question-ranking.html
+++ b/src/knockout/templates/question-ranking.html
@@ -2,7 +2,7 @@
    <!-- ko ifnot: question.selectToRankEnabled -->
   <div data-bind="css: question.rootClass">
     <!-- ko foreach: { data: question.rankingChoices, as: 'item', afterRender: question.koAfterRender } -->
-      <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
+      <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { number: question.getNumberByIndex($index()), componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
       <!-- /ko -->
     <!-- /ko -->
   </div>
@@ -12,7 +12,7 @@
   <div data-bind="css: question.rootClass">
     <div data-bind="css: question.getContainerClasses('from')" data-ranking="from-container">
       <!-- ko foreach: { data: question.unRankingChoices, as: 'item', afterRender: question.koAfterRender } -->
-        <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { unrankedItem: true, componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
+        <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { number: '', componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
         <!-- /ko -->
       <!-- /ko -->
       <!-- ko if: question.unRankingChoices.length === 0 -->
@@ -22,7 +22,7 @@
     <div data-bind="css: cssClasses.containersDivider"></div>
     <div data-bind="css: question.getContainerClasses('to')" data-ranking="to-container">
       <!-- ko foreach: { data: question.rankingChoices, as: 'item', afterRender: question.koAfterRender } -->
-        <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
+        <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { number: question.getNumberByIndex($index()), componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
         <!-- /ko -->
       <!-- /ko -->
       <!-- ko if: question.rankingChoices.length === 0 -->
@@ -42,31 +42,27 @@
       <div data-bind="css: question.cssClasses.itemGhostNode"></div>
       <div data-bind="css: question.cssClasses.itemContent">
         <div data-bind="css: question.cssClasses.itemIconContainer">
-          <svg
-            width="10"
-            height="16"
-            viewBox="0 0 10 16"
-            data-bind="css: question.getIconHoverCss()"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M6 2C6 0.9 6.9 0 8 0C9.1 0 10 0.9 10 2C10 3.1 9.1 4 8 4C6.9 4 6 3.1 6 2ZM2 0C0.9 0 0 0.9 0 2C0 3.1 0.9 4 2 4C3.1 4 4 3.1 4 2C4 0.9 3.1 0 2 0ZM8 6C6.9 6 6 6.9 6 8C6 9.1 6.9 10 8 10C9.1 10 10 9.1 10 8C10 6.9 9.1 6 8 6ZM2 6C0.9 6 0 6.9 0 8C0 9.1 0.9 10 2 10C3.1 10 4 9.1 4 8C4 6.9 3.1 6 2 6ZM8 12C6.9 12 6 12.9 6 14C6 15.1 6.9 16 8 16C9.1 16 10 15.1 10 14C10 12.9 9.1 12 8 12ZM2 12C0.9 12 0 12.9 0 14C0 15.1 0.9 16 2 16C3.1 16 4 15.1 4 14C4 12.9 3.1 12 2 12Z"
-            />
+          <svg data-bind="css:question.getIconHoverCss()">
+            <use data-bind="attr:{'xlink:href':question.dragDropSvgIcon}" xlink:href=''></use>
           </svg>
-          <svg
-            width="10"
-            height="24"
-            viewBox="0 0 10 24"
-            data-bind="css: question.getIconFocusCss()"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path d="M10 5L5 0L0 5H4V9H6V5H10Z" />
-            <path d="M6 19V15H4V19H0L5 24L10 19H6Z" />
+          <svg data-bind="css:question.getIconFocusCss()">
+            <use data-bind="attr:{'xlink:href':question.arrowsSvgIcon}" xlink:href=''></use>
           </svg>
         </div>
+        <!-- ko if: $parent.number -->
         <div
-          data-bind="css: question.getItemIndexClasses(item), text: $parent.unrankedItem ? '' : question.getNumberByIndex($index())"
+          data-bind="css: question.getItemIndexClasses(item), text: $parent.number"
         ></div>
+        <!-- /ko -->
+        <!-- ko ifnot: $parent.number -->
+        <div
+          data-bind="css: question.getItemIndexClasses(item)"
+        >
+        <svg>
+          <use data-bind="attr:{'xlink:href':question.dashSvgIcon}" xlink:href=''></use>
+        </svg>
+      </div>
+        <!-- /ko -->
         <div data-bind="css: question.cssClasses.controlLabel">
           <!-- ko template: { name: 'survey-string', data: $data.locText } -->
           <!-- /ko -->
