--- a/src/common-styles/sv-brand-info.scss
+++ b/src/common-styles/sv-brand-info.scss
@@ -1,5 +1,11 @@
 sv-brand-info {}
 
+sv-brand-info, .sv-brand-info {
+  z-index: 1;
+  position: relative;
+  margin-top: 1px;
+}
+
 .sv-brand-info {
   width: 100%;
   font-family: $font-family;
