work for #7116 Semi-transparency drop-down menu issue.

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -271,7 +271,7 @@ sv-popup {
   }
 }
 
-.sv-popup--dropdown {
+.sv-popup.sv-popup--dropdown {
   .sv-list__filter {
     margin-bottom: calcSize(1);
   }
