--- a/src/knockout/components/tagbox/tagbox.html
+++ b/src/knockout/components/tagbox/tagbox.html
@@ -44,6 +44,8 @@
             'aria-expanded': question.ariaExpanded,
             'aria-controls': model.listElementId,
             'aria-activedescendant': model.ariaActivedescendant,
+            'aria-label': question.a11y_input_ariaLabel,
+            'aria-labelledby': question.a11y_input_ariaLabelledBy,
             placeholder: model.filterStringPlaceholder, 
             disabled: question.isInputReadOnly,
             readonly: !model.searchEnabled 
