Work for https://github.com/surveyjs/service/issues/1288 - fixed initial a11y tests for react, angular and vue2+3

--- a/packages/survey-angular-ui/src/questions/imagepicker.component.html
+++ b/packages/survey-angular-ui/src/questions/imagepicker.component.html
@@ -1,5 +1,5 @@
   <fieldset [class]="model.getSelectBaseRootCss()" #contentElement>
-      <legend [attr.aria-label]="model.locTitle.renderedHtml" role="radio"></legend>
+      <legend class="sv-hidden">{{model.locTitle.renderedHtml}}</legend>
       <ng-container *ngIf="!model.hasColumns">
         <ng-container *ngFor="let item of model.visibleChoices">
           <ng-template [component]="{ name: getItemValueComponentName(item), data: getItemValueComponentData(item) }"></ng-template>
