--- a/packages/survey-angular-ui/src/components/dropdown/dropdown.component.html
+++ b/packages/survey-angular-ui/src/components/dropdown/dropdown.component.html
@@ -26,6 +26,8 @@
             [attr.tabindex]="dropdownModel.inputReadOnly ? null : -1"
             [attr.disabled]="model.isInputReadOnly ? true : null"
             [attr.aria-controls]="dropdownModel.listElementId"
+            [attr.aria-label]="model.a11y_input_ariaLabel"
+            [attr.aria-labelledby]="model.a11y_input_ariaLabelledBy"
             [attr.aria-expanded]="model.ariaExpanded"
             [attr.aria-activedescendant]="dropdownModel.ariaActivedescendant"
             [attr.placeholder]="dropdownModel.placeholderRendered" [attr.readonly]="!dropdownModel.searchEnabled ? true : null" 
