work for #7220 fix character counter styles for mobile view

--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -69,6 +69,15 @@ textarea {
   position: relative;
 }
 
+.sd-text__character-counter {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.sd-text__character-counter:focus-within {
+  padding-inline-end: calcSize(8);
+}
+
 .sd-remaining-character-counter {
   display: none;
   flex-direction: row;
