#7185 Matrix for mobile (details) Fixes #7185

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -443,7 +443,8 @@
 
   .sd-table {
     tr {
-      display: block;
+      display: flex;
+        flex-direction: column;
     }
   }
 
@@ -452,11 +453,26 @@
       padding-top: calcSize(1);
     }
   }
+ .sd-table__row {
+    padding-top: calcSize(2);
+ }
+ .sd-table__row--expanded {
+   .sd-table__cell-action--show-detail-mobile {
+	 display: none;
+   }
+ }
 
   .sd-table:not(.sd-matrix__table) {
-    tr {
-      padding-bottom: calcSize(1);
-
+    tr:not(.sd-table__row--has-panel){
+      &:not(:last-of-type) {
+        padding-bottom: calcSize(3);
+        &::after {
+          bottom: calcSize(-3);
+        }
+      }
+      padding-bottom: calcSize(0);
+    }
+    tr:not(.sd-table__row--expanded) {
       &::after {
         z-index: 12;
         content: " ";
@@ -465,11 +481,15 @@
         height: 1px;
         background-color: $border-light;
         left: calcSize(-2);
-        bottom: calcSize(-1);
+        bottom: calcSize(0);
         width: calc(100% + 4 * #{$base-unit});
         z-index: 12;
       }
     }
+  }
+
+  .sd-table-wrapper:last-of-type .sd-table__row:last-of-type .sd-table__cell-action--show-detail-mobile {
+    margin-bottom: calcSize(-2);
   }
 
   .sd-matrix__label {
@@ -477,6 +497,8 @@
   }
 
   .sd-table__cell {
+    border-top: none;
+      border-bottom: none;
     display: block;
     padding-top: 0;
     padding-bottom: 0;
@@ -484,7 +506,7 @@
   }
 
   .sd-table__cell {
-    margin-top: calcSize(1);
+    margin-top: calcSize(2);
   }
 
   .sd-table__cell:first-of-type,
@@ -494,7 +516,6 @@
 
   .sd-table__cell {
     &::before {
-      padding-top: calcSize(2);
       padding-bottom: calcSize(1);
       content: attr(data-responsive-title);
       font-weight: 600;
@@ -511,13 +532,25 @@
       content: none;
     }
   }
+  .sd-table__cell--detail-panel {
+    padding-top: 0;
+    padding-bottom: 0;
+    border-top: 0;
+    border-bottom: 0;
 
+  .sd-panel__content {
+      padding-top: 0;
+    }
+  }
   .sd-table__cell.sd-table__cell--actions {
     width: auto;
+    margin-top: calcSize(1);
+      margin-bottom: calcSize(1);
 
     .sd-action-bar {
       margin-right: calcSize(-3);
-      justify-content: flex-end;
+      margin-left: calcSize(-3);
+        justify-content: space-between;
       background: $background;
     }
   }
@@ -542,14 +575,16 @@
 
   .sd-table__cell--row-text:not(.sd-matrix__cell) {
     color: $foreground-light;
-    padding-top: calcSize(2);
+  }
+  .sd-table__row {
+    padding-bottom: calcSize(2);
+    &.sd-table__row--has-panel {
+      padding-bottom: calcSize(0);
+    }
+    
   }
 
   .sd-matrixdropdown.sd-table {
-    tr:not(:last-child) {
-      padding-bottom: calcSize(2);
-    }
-
     tr::after {
       bottom: calcSize(-2);
     }
