--- a/src/defaultV2-theme/blocks/sd-matrix.scss
+++ b/src/defaultV2-theme/blocks/sd-matrix.scss
@@ -8,15 +8,19 @@
 
 .sd-matrix__label {
   display: flex;
+  position: relative;
   justify-content: center;
 }
+
 .sd-matrix__text {
   padding: calcSize(2);
 }
+
 .sd-matrix__text--checked {
   background-color: $primary-light;
   padding: calcSize(2);
 }
+
 .sd-matrix__cell:first-of-type {
   font-weight: $font-questiontitle-weight;
   text-align: left;
