#7185 - fixed for angular

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -495,7 +495,7 @@
     }
   }
 
-  .sd-table-wrapper:last-of-type .sd-table__row:last-of-type  {
+  .sd-table:not(.sd-table--has-footer) .sd-table__row:last-of-type  {
     .sd-table__cell-action--show-detail-mobile, .sd-table__cell-action--remove-row {
       margin-bottom: calcSize(-2);
     }
