--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -443,7 +443,8 @@
 
   .sd-table {
     tr {
-      display: block;
+      display: flex;
+        flex-direction: column;
     }
   }
 
@@ -452,11 +453,33 @@
       padding-top: calcSize(1);
     }
   }
+ .sd-table__row {
+    padding-top: calcSize(2);
+ }
+ .sd-table__row--expanded {
+   .sd-table__cell-action--show-detail-mobile {
+	 display: none;
+   }
+ }
 
   .sd-table:not(.sd-matrix__table) {
-    tr {
-      padding-bottom: calcSize(1);
-
+    .sd-table__row {
+      padding-bottom: calcSize(2);
+      &.sd-table__row--has-end-actions {
+        padding-bottom: calcSize(0);
+      }
+    }
+  
+    tr:not(.sd-table__row--has-end-actions){
+      &:not(:last-of-type) {
+        padding-bottom: calcSize(3);
+        &::after {
+          bottom: calcSize(-3);
+        }
+      }
+      padding-bottom: calcSize(0);
+    }
+    tr:not(.sd-table__row--expanded) {
       &::after {
         z-index: 12;
         content: " ";
@@ -465,10 +488,16 @@
         height: 1px;
         background-color: $border-light;
         left: calcSize(-2);
-        bottom: calcSize(-1);
+        bottom: calcSize(0);
         width: calc(100% + 4 * #{$base-unit});
         z-index: 12;
       }
+    }
+  }
+
+  .sd-table:not(.sd-table--has-footer) .sd-table__row:last-of-type  {
+    .sd-table__cell-action--show-detail-mobile, .sd-table__cell-action--remove-row {
+      margin-bottom: calcSize(-2);
     }
   }
 
@@ -477,6 +506,8 @@
   }
 
   .sd-table__cell {
+    border-top: none;
+      border-bottom: none;
     display: block;
     padding-top: 0;
     padding-bottom: 0;
@@ -484,9 +515,18 @@
   }
 
   .sd-table__cell {
-    margin-top: calcSize(1);
+    margin-top: calcSize(2);
   }
 
+  .sd-table__cell--error {
+    margin-top: calcSize(0);
+    &.sd-table__cell--error-bottom {
+      .sd-question__erbox {
+        margin-top: calcSize(1);
+      }
+    }
+  }
+  
   .sd-table__cell:first-of-type,
   .sd-matrix__cell {
     margin-top: 0;
@@ -494,7 +534,6 @@
 
   .sd-table__cell {
     &::before {
-      padding-top: calcSize(2);
       padding-bottom: calcSize(1);
       content: attr(data-responsive-title);
       font-weight: 600;
@@ -511,14 +550,28 @@
       content: none;
     }
   }
+  .sd-table__cell--detail-panel {
+    padding-top: 0;
+    padding-bottom: 0;
+    border-top: 0;
+    border-bottom: 0;
 
+  .sd-panel__content {
+      padding-top: 0;
+    }
+  }
   .sd-table__cell.sd-table__cell--actions {
     width: auto;
+    margin-top: calcSize(1);
+      margin-bottom: calcSize(1);
 
     .sd-action-bar {
       margin-right: calcSize(-3);
-      justify-content: flex-end;
+      margin-left: calcSize(-3);
       background: $background;
+    }
+    #show-detail-mobile {
+      flex-grow: 1;
     }
   }
 
@@ -542,14 +595,9 @@
 
   .sd-table__cell--row-text:not(.sd-matrix__cell) {
     color: $foreground-light;
-    padding-top: calcSize(2);
   }
 
   .sd-matrixdropdown.sd-table {
-    tr:not(:last-child) {
-      padding-bottom: calcSize(2);
-    }
-
     tr::after {
       bottom: calcSize(-2);
     }
@@ -569,14 +617,15 @@
 
   .sd-table__cell--error-top {
     .sd-question__erbox {
-      margin-top: calcSize(2);
-      margin-bottom: calcSize(-2);
+      margin-top: calcSize(3);
+      margin-bottom: calcSize(-1);
     }
   }
 
   .sd-table__cell--error-top:first-of-type {
     .sd-question__erbox {
-      margin-bottom: calcSize(-1);
+      margin-top: calcSize(0);
+      margin-bottom: calcSize(1);
     }
   }
 }
