Fix file issues
 - Fix camera takes wrong width and height properties
 - Fix imageHeight/imageWidth behaviour for multiple preview
 - Fix actions are not visible in design mode
 - Fix choose button is not clickable
 - Fix empty space under image on mobile

--- a/packages/survey-angular-ui/src/components/file/file-preview.component.html
+++ b/packages/survey-angular-ui/src/components/file/file-preview.component.html
@@ -9,7 +9,7 @@
                         val.name
                         }}</a>
                 </div>
-                <div [class]="question.cssClasses.imageWrapper">
+                <div [class]="question.getImageWrapperCss(val)">
                     <img *ngIf="question.canPreviewImage(val)" [attr.src]="val.content | safeUrl"
                         [style.height]="question.imageHeight" [style.width]="question.imageWidth" alt="File preview" />
                     <svg *ngIf="question.defaultImage(val)" [iconName]="question.cssClasses.defaultImageIconId"
