--- a/src/defaultV2-theme/blocks/sd-action.scss
+++ b/src/defaultV2-theme/blocks/sd-action.scss
@@ -52,6 +52,10 @@ svg.sd-action--icon {
   cursor: default;
   opacity: 0.25;
   pointer-events: none;
+
+  use {
+    fill: $font-questiondescription-color;
+  }
 }
 
 .sd-action:not(.sd-action--pressed):hover,
