--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -148,9 +148,10 @@
 .sd-file__preview {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   flex-direction: column;
   min-height: 100%;
+  width: calcSize(12);
   margin: 0;
 
   .sd-file__default-image {
@@ -182,6 +183,8 @@
     white-space: normal;
     word-break: break-all;
     width: calcSize(12);
+    min-width: 100%;
+    max-width: 100%;
     overflow: hidden;
     max-height: calcSize(6);
     text-overflow: ellipsis;
@@ -203,27 +206,31 @@
 .sd-file__image-wrapper {
   position: relative;
   text-align: center;
-  min-width: calcSize(12);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calcSize(12);
   min-height: calcSize(12);
+  height: calcSize(12);
+  background: $background-dim;
 
   img:not(.sd-file__default-image) {
     display: block;
+    max-width: 100%;
+    max-height: 100%;
     width: calcSize(12);
     height: calcSize(12);
     object-fit: contain;
-    background: $background-dim;
   }
+}
+
+.sd-file__image-wrapper--default-image {
+  background: transparent;
 }
 
 .sd-file--single {
   img:hover+.sd-file__remove-file-button {
     display: none;
-  }
-}
-
-.sd-file--mobile:first-child {
-  .sd-file__list {
-    height: calc(100% - 4 * #{$base-unit});
   }
 }
 
@@ -245,13 +252,16 @@
   }
 
   .sd-file__image-wrapper {
+    background-color: $background-dim-light;
+  }
+
+  .sd-file__image-wrapper {
     min-height: 100%;
     min-width: 100%;
 
     img {
       width: 100%;
       height: 100%;
-      background-color: $background-dim-light;
     }
   }
 
@@ -264,10 +274,16 @@
     a {
       color: transparent;
       width: 100%;
+      min-width: 100%;
+      max-width: 100%;
       height: 100%;
       outline: none;
     }
   }
+}
+
+.sd-file__image-wrapper.sd-file__image-wrapper--default-image {
+  background: transparent;
 }
 
 .sd-file>input:focus+.sd-file__decorator .sd-file__choose-btn {
@@ -326,7 +342,7 @@
 }
 
 .sd-file__video-container {
-  background-color: $background-dim;
+  background-color: $background-dark;
   position: absolute;
   top: 0;
   left: 0;
